# FreelanceMCP

./: .env.example  .gitignore  Dockerfile  automation.py  docker-compose.yml  freelance_api_clients.py  freelance_client.py  freelance_client2.py  freelance_server.py  pyproject.toml  requirements.txt  search_gigs.py  web_ui.py
dashboard/: index.html
docs/: FREELANCER_API_GUIDE.md
utils/: config.py
